regression/parse_pool/progtest15.sfp.out

sfc in program parse_pool/progtest15.sfp
syntax error at line 2, position 39:
configuration foo { nullApp() nullNet nullMac() nullRadio() }
                                      ^
