regression/parse_pool/progtest15.sfp
# Testing erroneous program definition (missing () next to network module)
configuration foo { nullApp() nullNet nullMac() nullRadio() }
event-condition bar { timer = 8192 TYPE_SECOND }

any goto foo when bar

start foo

